--- a/index.html
+++ b/index.html
@@ -1289,9 +1289,7 @@
         <div class="project-content">
           <h3>Collard Strikers</h3>
           <div class="project-tech">
-            <span class="tech-tag">JavaScript</span>
-            <span class="tech-tag">HTML5 Canvas</span>
-            <span class="tech-tag">Game Dev</span>
+            <span class="tech-tag">Python</span>
           </div>
           <p>Fast-paced space arcade game where players control a spaceship, dodging and destroying incoming meteors to score points.</p>
         </div>
@@ -1314,9 +1312,7 @@
         <div class="project-content">
           <h3>Medhabi</h3>
           <div class="project-tech">
-            <span class="tech-tag">Python</span>
-            <span class="tech-tag">Django</span>
-            <span class="tech-tag">PostgreSQL</span>
+            <span class="tech-tag">C</span>
           </div>
           <p>Student Registration, Entrance Examination Automation, and Performance Analytics for streamlined educational assessments.</p>
         </div>
@@ -1339,9 +1335,7 @@
         <div class="project-content">
           <h3>BillTune</h3>
           <div class="project-tech">
-            <span class="tech-tag">Java</span>
-            <span class="tech-tag">Swing</span>
-            <span class="tech-tag">SQLite</span>
+            <span class="tech-tag">C++</span>
           </div>
           <p>Unlock the full potential of your cashier operations with BillTune, designed to enhance efficiency and customization.</p>
         </div>
