--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/png" href="https://assets.onecompiler.app/434pwjffd/434qhf7y7/Title_Logo-removebg-preview.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="https://uploads.onecompiler.app/434pwjffd/434qhf7y7/Title_Logo-removebg-preview.png" sizes="32x32">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Manas Gnawali Portfolio</title>
@@ -356,7 +356,7 @@
       align-items: center;
       height: 100vh;
       background: linear-gradient(135deg, rgba(0, 0, 0, 0.7), rgba(26, 26, 26, 0.5)),
-                  url('https://assets.onecompiler.app/434pwjffd/434qjrvz4/WhatsApp%20Image%202024-12-31%20at%205.08.29%20PM.jpeg') no-repeat center center/cover;
+                  url('https://uploads.onecompiler.app/434pwjffd/434qjrvz4/WhatsApp%20Image%202024-12-31%20at%205.08.29%20PM.jpeg') no-repeat center center/cover;
       color: var(--text-light);
       text-align: center;
       position: relative;
@@ -1235,7 +1235,7 @@
     <h2>About Me</h2>
     <div class="about-content">
       <div class="about-image slide-in-left">
-        <img src="https://assets.onecompiler.app/434pwjffd/434qhf7y7/416293059_2314645762052339_8609931637556024414_n.jpg" alt="Manas Gnawali">
+        <img src="https://uploads.onecompiler.app/434pwjffd/434qhf7y7/416293059_2314645762052339_8609931637556024414_n.jpg" alt="Manas Gnawali">
         <div class="image-decoration"></div>
       </div>
       
@@ -1274,7 +1274,7 @@
     <div class="projects-container">
       <div class="project-item">
         <div class="project-image">
-          <img src="https://assets.onecompiler.app/434pwjffd/434qhf7y7/Collard%20Strikers.webp" alt="Collard Strikers">
+          <img src="https://uploads.onecompiler.app/434pwjffd/434qhf7y7/Collard%20Strikers.webp" alt="Collard Strikers">
           <div class="project-overlay">
             <div class="project-links">
               <a href="https://github.com/ManasGn64/Collard" target="_blank" class="project-link">
@@ -1297,7 +1297,7 @@
 
       <div class="project-item">
         <div class="project-image">
-          <img src="https://assets.onecompiler.app/434pwjffd/434qhf7y7/Medhabi.webp" alt="Medhabi">
+          <img src="https://uploads.onecompiler.app/434pwjffd/434qhf7y7/Medhabi.webp" alt="Medhabi">
           <div class="project-overlay">
             <div class="project-links">
               <a href="https://github.com/ManasGn64/Medhabi" target="_blank" class="project-link">
@@ -1320,7 +1320,7 @@
 
       <div class="project-item">
         <div class="project-image">
-          <img src="https://assets.onecompiler.app/434pwjffd/434qhf7y7/BillTune.webp" alt="BillTune">
+          <img src="https://uploads.onecompiler.app/434pwjffd/434qhf7y7/BillTune.webp" alt="BillTune">
           <div class="project-overlay">
             <div class="project-links">
               <a href="https://github.com/ManasGn64/BillTune" target="_blank" class="project-link">
